[tool.poetry]
name = "python-concurrency"
version = "0.1.0"
description = ""
authors = ["Binh Le <lebinh190998@gmail.com>"]
readme = "README.md"
packages = [{include = "python_concurrency"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
